flask-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask
  labels:
    app: flask
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: flask
      port:
        number: 80
  rules:
  - host: my.k8s.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    app: flask
    tier: frontend
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: flask
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  labels:
    app: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flask
        tier: frontend
    spec:
      containers:
      - image: v17v3/flaskapp:v1.4
        name: flask
        resources:
          limits:
            cpu: "250m"
            memory: "490Mi"
          requests:
            cpu: "5m"
            memory: "50Mi"
        ports:
        - containerPort: 5000
          name: flask
